# SoviaMate

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  README.md  REFERENCES.md  pyproject.toml  train.py
configs/training/: audio_codec.yaml  audio_codec_asr.yaml  audio_codec_asr_aug.yaml  audio_codec_asr_aug_600.yaml
docs/: audio_codec_design.md
models/: asr_tokenizer.model  asr_tokenizer.vocab  asr_tokenizer_8k.model  asr_tokenizer_8k.vocab  emilia_tokenizer.model  emilia_tokenizer.vocab  mls_english_tokenizer.model  mls_english_tokenizer.vocab
scripts/: eval_audio_codec.py  eval_audio_quality.py  extract_transcripts.py  prepare_tokenizer.py  train_tokenizer.py
soviamate/bundles/: __init__.py  codec.py  conversion.py
soviamate/datas/: dataset.py  extractor.py  tokenizer.py  transform.py
soviamate/layers/: campplus.py  conformer.py  ecapa_tdnn.py  eres2netv2.py  processor.py  recognizer.py  redimnet.py  res2former.py  streaming.py
soviamate/modules/: adapter.py  criterion.py  decoder.py  discriminator.py  encoder.py  quantizer.py
soviamate/optims/: lr_scheduler.py
soviamate/tasks/: codec.py  conversion.py  restoration.py
soviamate/utils/: helper.py  utility.py
tokenizers/: emilia_english_tokenizer.model  emilia_english_tokenizer.vocab  emilia_libri_tokenizer.model  emilia_libri_tokenizer.vocab  libri_heavy_tokenizer.model  libri_heavy_tokenizer.vocab  libri_speech_tokenizer.model  libri_speech_tokenizer.vocab
