[project]
name = "soviamate"
version = "0.1.0"
description = "SoviaMate - a framework for Conversational AI"
authors = [{ name = "Samson", email = "samson-voice@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "sentencepiece>=0.2.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[project.scripts]
extract-transcripts = "scripts.extract_transcripts:main"
train-tokenizer = "scripts.train_tokenizer:main"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.18.2",
    "ruff>=0.13.2",
    "tensorboard>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
