[project]
name = "soviamate"
version = "0.1.0"
description = "SoviaMate - a framework for Conversational AI"
authors = [{ name = "Samson", email = "samson-voice@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "praat-parselmouth>=0.4.7",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "torchcodec>=0.7,<0.8",
]

[project.scripts]
prepare-tokenizer = "scripts.prepare_tokenizer:main"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.18.2",
    "ruff>=0.13.2",
    "tensorboard>=2.20.0",
]
test = [
    "torchmetrics[audio]>=1.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
